--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,29 +7,38 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    env: # Definir o RAILWAY_TOKEN no nível do JOB para que todos os passos o herdem
-      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+    # Não precisa do env: RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} aqui no nível do job se cada passo que precisa vai declarar
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup Railway CLI
+      - name: Setup Railway CLI and Login
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} # Define o token no ambiente DESTE PASSO
         run: |
           curl -fsSL https://railway.app/install.sh | sh
-          # A linha de login explícito foi removida daqui, pois o token no env do job deve ser suficiente
+          railway login # Tenta o login. Em ambientes de CI, com RAILWAY_TOKEN no env, isso deve funcionar.
+                        # Se o CLI for mais antigo e esperar o token como argumento:
+                        # railway login $RAILWAY_TOKEN
+                        # A documentação sugere que apenas ter RAILWAY_TOKEN no env é suficiente.
 
       - name: Deploy to Railway
-        # O RAILWAY_TOKEN já está no ambiente deste passo devido ao 'env:' no nível do job
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} # Garante que está aqui também
+          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }} # Boa prática adicionar todos os secrets usados no passo
         run: |
-          railway link --project ${{ secrets.RAILWAY_PROJECT_ID }}
+          railway link --project $RAILWAY_PROJECT_ID
           railway up --yes
 
       - name: Set Environment Variables
-        # O RAILWAY_TOKEN já está no ambiente deste passo
+        env:
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          EVO_API_KEY: ${{ secrets.EVO_API_KEY }}
         run: |
           railway env set SERVER_TYPE=http
           railway env set SERVER_PORT=8080
           railway env set CORS_ORIGIN=*
           railway env set DATABASE_ENABLED=true
           railway env set DATABASE_PROVIDER=postgresql
-          railway env set DATABASE_CONNECTION_URI=${{ secrets.DATABASE_URL }}
-          railway env set AUTHENTICATION_API_KEY=${{ secrets.EVO_API_KEY }}
+          railway env set DATABASE_CONNECTION_URI=$DATABASE_URL
+          railway env set AUTHENTICATION_API_KEY=$EVO_API_KEY
