--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,34 +7,33 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} # Definido aqui para todos os steps
+      # Os outros secrets também podem ser definidos aqui se forem usados em múltiplos steps,
+      # ou diretamente no 'env' do step específico.
+      # Para os comandos 'railway env set', vamos referenciá-los via secrets diretamente.
+
     steps:
       - uses: actions/checkout@v3
 
       - name: Setup Railway CLI
         run: |
           curl -fsSL https://railway.app/install.sh | sh
-          # Nenhum comando de login explícito aqui.
-          # Vamos confiar que o RAILWAY_TOKEN no env dos próximos passos será usado.
+          # Nenhum login explícito. O token no ambiente do job DEVE ser suficiente.
 
       - name: Deploy to Railway
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-          # RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }} # O --project já passa isso
+        # RAILWAY_TOKEN é herdado do 'env' do job
         run: |
           railway link --project ${{ secrets.RAILWAY_PROJECT_ID }}
           railway up --yes
 
       - name: Set Environment Variables
-        env:
-          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }}
-          # As outras secrets são usadas diretamente no comando com $NOME_DO_SECRET_NO_ENV
-          DATABASE_URL_SECRET: ${{ secrets.DATABASE_URL }}
-          EVO_API_KEY_SECRET: ${{ secrets.EVO_API_KEY }}
+        # RAILWAY_TOKEN é herdado do 'env' do job
         run: |
           railway env set SERVER_TYPE=http
           railway env set SERVER_PORT=8080
           railway env set CORS_ORIGIN=*
           railway env set DATABASE_ENABLED=true
           railway env set DATABASE_PROVIDER=postgresql
-          railway env set DATABASE_CONNECTION_URI=$DATABASE_URL_SECRET
-          railway env set AUTHENTICATION_API_KEY=$EVO_API_KEY_SECRET
+          railway env set DATABASE_CONNECTION_URI='${{ secrets.DATABASE_URL }}' # Note as aspas simples
+          railway env set AUTHENTICATION_API_KEY='${{ secrets.EVO_API_KEY }}'   # Note as aspas simples
